fixed card height, width, and gaps

--- a/css/card.css
+++ b/css/card.css
@@ -1,6 +1,6 @@
 .card {
-    width: 100px;
-    height: auto;
+    width: 240px;
+    height: 300px;
     background-color: var(--tertiary);
     border-radius: 5px;
     padding: 20px;
@@ -9,9 +9,9 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
+    justify-content: start;
     pointer-events: all;
+    gap: 10px 8px;
 }
 
 .card .drag-texture {
